<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/card_view_task_item"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    android:background="@color/colorAccent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:elevation="8dp"
        android:background="@color/colorBackground">

        <TextView
            android:id="@+id/tv_new_task"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Title"
            android:ellipsize="end"
            android:maxLines="2"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/txt_new_task"
            android:textColor="@color/colorBlack"
            android:textSize="25sp"/>

        <TextView
            android:id="@+id/tv_task_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="2"
            android:ellipsize="end"
            style="@style/TextAppearance.AppCompat.Body1"
           app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_new_task"
            android:text="@string/txt_task_description"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"/>

        <TextView
            android:id="@+id/tv_task_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:gravity="end"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="Status ?"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="12dp"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:text="@string/txt_date"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"/>

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.AppCompat.Body2"
            android:layout_margin="12dp"
            app:layout_constraintStart_toEndOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_task_description"
            android:text="@string/txt_time"
            android:textSize="15sp"
            android:textColor="@color/colorBlack"/>
        <Button
            android:id="@+id/btn_add_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_add_comment"
            android:textColor="@color/colorBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>