<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".view.activities.CreateAccountActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="40dp"
                android:layout_gravity="center"
                android:src="@drawable/ic_todo" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="30sp"
                android:fontFamily="cursive"
                android:textStyle="bold"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:text="@string/txt_create_account"
                android:textColor="@color/colorPrimary"
                android:textSize="40sp"
                android:fontFamily="sans-serif-condensed-medium"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <EditText
                    android:id="@+id/edt_username"
                    android:layout_width="300dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:padding="10dp"
                    android:hint="@string/hint_enter_your_username"
                    android:drawablePadding="8dp"
                    android:textColorHint="@color/colorLightBlue"
                    android:textColor="@color/colorBlack"
                    android:drawableStart="@drawable/ic_account_circle_black_24dp"
                    android:background="@drawable/round"
                    android:layout_marginTop="30dp"
                    android:inputType="text"/>

                <ProgressBar
                    android:id="@+id/progress_circular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:visibility="gone"
                    android:indeterminateTint="@color/colorAccent"
                    android:forceHasOverlappingRendering="true"
                    android:translationZ="1dp"/>

                <EditText
                    android:id="@+id/edt_login_id"
                    android:layout_width="300dp"
                    android:layout_height="70dp"
                    android:layout_gravity="center"
                    android:layout_below="@+id/edt_username"
                    android:padding="10dp"
                    android:hint="@string/hint_email"
                    android:drawablePadding="8dp"
                    android:textColorHint="@color/colorLightBlue"
                    android:textColor="@color/colorBlack"
                    android:drawableLeft="@drawable/ic_account_circle_black_24dp"
                    android:background="@drawable/round"
                    android:layout_marginTop="20dp"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/edt_login_password"
                    android:layout_width="300dp"
                    android:layout_height="70dp"
                    android:inputType="textPassword"
                    android:padding="10dp"
                    android:layout_gravity="center"
                    android:layout_below="@+id/edt_login_id"
                    android:hint="@string/hint_password"
                    android:drawablePadding="8dp"
                    android:textColorHint="@color/colorLightBlue"
                    android:textColor="@color/colorBlack"
                    android:drawableLeft="@drawable/ic_lock_black_24dp"
                    android:background="@drawable/round"
                    android:layout_marginTop="20dp"
                    app:layout_constraintEnd_toEndOf="parent" />
            </RelativeLayout>

            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:padding="20dp"
                android:text="@string/btn_create_account"
                android:textColor="@color/colorBackground" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>